# kaia-app

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  commitlint.config.js
apps/api/: .coverage  .coveragerc  .importlinter  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  vulture_whitelist.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: a3f1b2c4d5e6_add_chat_survey_roadmap_profile.py  b7e3f9a1c2d5_add_preregistrations.py  c5fceead2dd4_init_users_refresh_tokens.py  c8f2e4b6d1a3_add_llm_usage_audit_events_prompt_templates.py  d4e9f2b1c7a8_add_character_to_chat_sessions.py  e5f1a3b2c8d7_add_thinking_raw_to_messages.py  f6a2b4c8d1e9_add_session_feedback.py  g7b3c5a1d8f2_add_mslq_results.py  h8c4d6e2f9a1_add_learning_topic.py  i9d5e7f3a2b1_add_simulation_flag_to_users.py  j0e6f8g4h3c2_add_learning_topic_to_prompts.py  k1f7g2h3a4b5_add_consent_research_data.py  l2g8h3i4b5c6_add_user_learning_profiles.py  m3h9i4j5k6l7_add_kaia_prompt_v3_warm.py  n4i0j5k6l7m8_update_kaia_prompt_v3_spiegel_closure.py  o5j1k6l7m8n9_update_kaia_prompt_v3_session_missions.py  p1k2l3m4n5o6_add_eval_tables.py  q2l3m4n5o6p7_add_system_settings.py  r3m4n5o6p7q8_add_kaia_model_to_users.py  s4n5o6p7q8r9_update_kaia_prompt_v4_loop_fix.py  t5o6p7q8r9s0_add_password_reset_tokens.py  (+2 more)
apps/api/app/: main.py
apps/api/tests/: factories.py  test_admin.py  test_chat.py  test_crisis.py  test_eval_service.py  test_health.py  test_new_domains.py  test_observability.py  test_prompts.py  test_security.py  test_service.py  test_slack.py  test_survey.py
(+270 files in other folders)
