[project]
name = "kaia-api"
version = "0.1.0"
description = "KAIA – Kinetic AI Agent | FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.14.0",
    "PyJWT[crypto]>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "anthropic>=0.40.0",
    "openai>=1.57.0",
    "mistralai>=1.2.0",
    "pgvector>=0.3.6",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A"]
ignore = ["S101", "A003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
